@@ -8,6 +8,7 @@ Kiwix 0.9 alpha6
 * Add the "Purge history" Tool (ID: 3036917)
 * Tab navigation (ID: 1644478)
 * Capacity to deal with splitted ZIM files
+* Add mouse button forward/back support (ID: 3052213)
 
 Kiwix 0.9 alpha5
 * kiwix-serve supports the inflate/deflate compression for text/html
